[metadata]
name = typer
version = 0.5.0
author = Sebastián Ramírez
author_email = tiangolo@gmail.com
url = https://github.com/tiangolo/typer
classifiers =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries
    Topic :: Software Development
    Typing :: Typed
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License

[options]
packages = find_namespace:
py_modules = typer
include_package_data = true
python_requires = >=3.6
install_requires =
    click >= 7.1.1, <9.0.0

[options.packages.find]
exclude =
    build*
    dist*
    docs*
    tests*
